--- a/css/styles.css
+++ b/css/styles.css
@@ -792,10 +792,16 @@ div .portfolio-card {
   fill: transparent;
 }
 
-#user-privacy:checked ~ label .checkbox-span {
+/*#user-privacy:checked ~ label .checkbox-span {
   background-color: var(--checked-color);
   border: none;
   fill: var(--text-color-floating);
+}*/
+
+input[type="checkbox"]:checked + .modal-checkbox-label > .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: var(--cloud);
 }
 
 .privacy-link {
